@@ -6,6 +6,8 @@ Version ?.?.?, released ????-??-??
 ----------------------------------
 SVN version: ?????
 
+- Fix output of stacktraces in util.ChainedException
+  (kiesel)
 - Fix DomXSLProcessor's error handling by clearing the error stack when
   error was handled
   (hinckel)
